3_day_3/network_policy/01_network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
spec:
  podSelector:
    matchExpressions:
    - key: "app"
      operator: In
      values:
      - default-backend
  ingress: []
