3_day_3/network_policy/02_network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-test-nginx
spec:
  podSelector:
    matchExpressions:
    - key: "app"
      operator: In
      values:
      - default-backend
  ingress:
  - from:
      - podSelector:
          matchLabels:
            name: test-nginx
