3_day_3/network_policy/04_network_policy.yaml
# Allow connections from office

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-whitelisted-ip
spec:
  podSelector:
    matchLabels:
      app: default-backend
  ingress:
  - from:
      - ipBlock:
          cidr: 10.0.9.202/24
